# parallel-cmd

./: .gitignore  Cargo.toml  README.md
src/: args.rs  command.rs  main.rs
